--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://digmenu-backend.onrender.com
-VITE_FRONTEND_URL=https://digital-menu-sand.vercel.app
+VITE_FRONTEND_URL=https://digital-menu-bice-three.vercel.app
