--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://digmenu-backend.onrender.com
-VITE_FRONTEND_URL=https://digital-menu-3qq1.vercel.app
+VITE_FRONTEND_URL=https://digital-menu-4696.vercel.app
