--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.3",
     "jsqr": "^1.4.0",
